# unibe_mcu

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
app/: CMakeLists.txt  app.overlay  prj.conf
app/src/: c12832a1z_display.c  c12832a1z_display.h  comm.h  display.c  display.h  gps.c  gps.h  magneto.c  magneto.h  main.c
